// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subscription router addOrUpdateTypeSubscription can add subscription 1`] = `
{
  "criteria": [
    {},
  ],
  "subscriber": {
    "addressAs": "tester",
    "channels": [],
    "id": "subscriber",
    "tenantId": "urn:ads:platform:tenant-service:v2:/tenants/test",
    "urn": "urn:ads:platform:notification-service:v1:/subscribers/subscriber",
    "userId": undefined,
  },
  "subscriberId": "subscriber",
  "type": undefined,
  "typeId": "test",
}
`;

exports[`subscription router addOrUpdateTypeSubscription can update subscription criteria 1`] = `
{
  "criteria": [
    {
      "context": {},
      "correlationId": "123",
    },
  ],
  "subscriber": {
    "addressAs": "tester",
    "channels": [],
    "id": "subscriber",
    "tenantId": "urn:ads:platform:tenant-service:v2:/tenants/test",
    "urn": "urn:ads:platform:notification-service:v1:/subscribers/subscriber",
    "userId": undefined,
  },
  "subscriberId": "subscriber",
  "type": undefined,
  "typeId": "test",
}
`;

exports[`subscription router createSubscriber can create subscriber 1`] = `
{
  "addressAs": "tester@test.com",
  "channels": [],
  "id": "subscriber",
  "tenantId": "urn:ads:platform:tenant-service:v2:/tenants/test",
  "urn": "urn:ads:platform:notification-service:v1:/subscribers/subscriber",
  "userId": undefined,
}
`;

exports[`subscription router createTypeSubscription can create subscription 1`] = `
{
  "criteria": [
    {},
  ],
  "subscriber": {
    "addressAs": "tester",
    "channels": [],
    "id": "subscriber",
    "tenantId": "urn:ads:platform:tenant-service:v2:/tenants/test",
    "urn": "urn:ads:platform:notification-service:v1:/subscribers/subscriber",
    "userId": undefined,
  },
  "subscriberId": "subscriber",
  "type": undefined,
  "typeId": "test",
}
`;

exports[`subscription router deleteSubscriber can delete subscriber 1`] = `
{
  "deleted": true,
}
`;

exports[`subscription router deleteTypeSubscription can delete subscription 1`] = `
{
  "deleted": true,
}
`;

exports[`subscription router getNotificationTypes can get types 1`] = `
[
  {
    "channels": [],
    "description": "testing 1 2 3",
    "events": [],
    "id": "test",
    "manageSubscribe": false,
    "name": "Test",
    "publicSubscribe": false,
    "subscriberRoles": [
      "test-subscriber",
    ],
  },
]
`;

exports[`subscription router getSubscriberDetails can get subscriber subscriptions 1`] = `
{
  "addressAs": "tester",
  "channels": [],
  "id": "subscriber",
  "subscriptions": [
    {
      "criteria": [
        {},
      ],
      "subscriberId": "subscriber",
      "type": {
        "channels": [],
        "description": "testing 1 2 3",
        "id": "test",
        "manageSubscribe": false,
        "name": "Test",
        "publicSubscribe": false,
      },
      "typeId": "test",
    },
  ],
  "tenantId": "urn:ads:platform:tenant-service:v2:/tenants/test",
  "urn": "urn:ads:platform:notification-service:v1:/subscribers/subscriber",
  "userId": undefined,
}
`;

exports[`subscription router getSubscriberSubscriptions can get subscriptions 1`] = `
{
  "page": {},
  "results": [],
}
`;

exports[`subscription router getSubscribers can get subscribers 1`] = `
{
  "page": {},
  "results": [],
}
`;

exports[`subscription router getSubscriptionChannels can get channels 1`] = `
[
  {
    "address": "tester@test.co",
    "channel": "email",
    "verified": false,
  },
]
`;

exports[`subscription router getTypeSubscription can get subscription 1`] = `
{
  "criteria": [
    {},
  ],
  "subscriber": {
    "addressAs": "tester",
    "channels": [],
    "id": "subscriber",
    "tenantId": "urn:ads:platform:tenant-service:v2:/tenants/test",
    "urn": "urn:ads:platform:notification-service:v1:/subscribers/subscriber",
    "userId": undefined,
  },
  "subscriberId": "subscriber",
  "type": undefined,
  "typeId": "test",
}
`;

exports[`subscription router getTypeSubscriptions can get subscriptions 1`] = `
{
  "page": {},
  "results": [],
}
`;

exports[`subscription router subscriberOperations can check code 1`] = `
{
  "verified": true,
}
`;

exports[`subscription router subscriberOperations can send code 1`] = `
{
  "sent": true,
}
`;

exports[`subscription router subscriberOperations can verify channel 1`] = `
{
  "verified": true,
}
`;

exports[`subscription router updateSubscriber can delete subscriber 1`] = `
{
  "addressAs": "tester",
  "channels": [],
  "id": "subscriber",
  "tenantId": "urn:ads:platform:tenant-service:v2:/tenants/test",
  "urn": "urn:ads:platform:notification-service:v1:/subscribers/subscriber",
  "userId": undefined,
}
`;
